--- a/config/_default/config.toml
+++ b/config/_default/config.toml
@@ -18,9 +18,6 @@ copyright = "&copy; 2016-2020 Gábor Lipták"
 # Enable analytics by entering your Google Analytics tracking ID
 googleAnalytics = ""
 
-# Enable comments by entering your Disqus shortname
-disqusShortname = "https-gliptak-github-io"
-
 ############################
 ## Advanced options below ##
 ############################
@@ -43,8 +40,15 @@ footnotereturnlinkcontents = "<sup>^</sup>"
 ignoreFiles = ["\\.ipynb$", ".ipynb_checkpoints$", "\\.Rmd$", "\\.Rmarkdown$", "_files$", "_cache$"]
 
 [outputs]
-  home = [ "HTML", "RSS", "JSON" ]
+  home = [ "HTML", "RSS", "JSON", "WebAppManifest" ]
   section = [ "HTML", "RSS" ]
+
+[mediaTypes."application/manifest+json"]
+  suffixes = ["webmanifest"]
+
+[outputFormats.WebAppManifest]
+  mediaType = "application/manifest+json"
+  rel = "manifest"
 
 # Configure BlackFriday Markdown rendering.
 #   See: https://gohugo.io/getting-started/configuration/#configure-blackfriday
