--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -60,7 +60,7 @@ time_format = "3:04 PM"
 # Enter contact details (optional). To hide a field, clear it to "".
 #email = "test@example.org"
 #phone = "888 888 88 88"
-address = {city = "Jacksonville", region = "FL"}
+address = {region = "FL", country="USA"}
 
 # Office hours: use `<br>` to insert a line break, or set to "" to remove office hours
 #office_hours = """Monday 10:00 to 13:00<br>
@@ -100,7 +100,7 @@ coordinates = {latitude = "29", longitude = "-82"}
   #   3: OpenStreetMap (Mapbox)
   engine = 2
   api_key = ""
-  zoom = 15
+  zoom = 10
 
 ############################
 ## Plugins                ##
