--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -17,7 +17,7 @@ jobs:
         with:
           repository: gliptak/gliptak.github.io
           token: ${{ secrets.GITHUB_TOKEN }}
-          branch: master
+          ref: master
           path: ${{ github.workspace }}/public
 
       - name: Checkout hugo-academic
@@ -39,7 +39,7 @@ jobs:
           extended: true
 
       - name: Build
-        run: hugo
+        run: hugo --debug
 
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
